k8s/overlays/pr/namespace-pr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pr-0
  labels:
    app.kubernetes.io/part-of: devsync
