k8s/overlays/pr/drop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsync-frontend
  namespace: devsync
$patch: delete
